Issue #23995: Removes _WCONIO_DEFINED check as the wchar_t console functions are always available.